crates/analyzer/tests/snapshots/errors__duplicate_arg_in_contract_method.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, test_files::fixture(path))"
---
error: duplicate parameter names in function `bar`
  ┌─ compile_errors/duplicate_arg_in_contract_method.fe:2:16
  │
2 │     pub fn bar(foo: u8, foo: u8) {}
  │                ^^^^^^^  ------- `foo` redefined here
  │                │         
  │                `foo` first defined here


